code bert score working with example

--- a/example/Demo.ipynb
+++ b/example/Demo.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "### Installation\n",
-    "if you have not installed `bert_score`, it is very easy\n",
+    "if you have not installed `code_bert_score`, it is very easy\n",
     "simply uncomment the line below to install through pip"
    ]
   },
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install bert_score"
+    "#!pip install code_bert_score"
    ]
   },
   {
@@ -43,8 +43,8 @@
    ],
    "source": [
     "# check your installation\n",
-    "import bert_score\n",
-    "bert_score.__version__"
+    "import code_bert_score\n",
+    "code_bert_score.__version__"
    ]
   },
   {
@@ -99,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will first demonstrate how to use the `score` function in `bert_score`, which is what you need to evaluate a set of machine generated outputs."
+    "We will first demonstrate how to use the `score` function in `code_bert_score`, which is what you need to evaluate a set of machine generated outputs."
    ]
   },
   {
@@ -108,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bert_score import score"
+    "from code_bert_score import score"
    ]
   },
   {
@@ -324,7 +324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some contextual embedding models, like RoBERTa, often produce BERTScores in a very narrow range (as shown above, the range is roughly between 0.92 and 1). Although this artifact does not affect the ranking ability of BERTScore, it affects the readability. Therefore, we propose to apply \"baseline rescaling\" to adjust the output scores. More details on this feature can be found in [this post](https://github.com/Tiiiger/bert_score/blob/master/journal/rescale_baseline.md)."
+    "Some contextual embedding models, like RoBERTa, often produce BERTScores in a very narrow range (as shown above, the range is roughly between 0.92 and 1). Although this artifact does not affect the ranking ability of BERTScore, it affects the readability. Therefore, we propose to apply \"baseline rescaling\" to adjust the output scores. More details on this feature can be found in [this post](https://github.com/Tiiiger/code_bert_score/blob/master/journal/rescale_baseline.md)."
    ]
   },
   {
@@ -434,7 +434,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bert_score import plot_example"
+    "from code_bert_score import plot_example"
    ]
   },
   {
@@ -499,7 +499,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In practice, most of the time of calling the `score` function is spent on building the model. In situations when we want to call the `score` function repeatedly, it is better to cache the model in a `scorer` object. Hence, in `bert_score` we also provide an object-oriented API. \n",
+    "In practice, most of the time of calling the `score` function is spent on building the model. In situations when we want to call the `score` function repeatedly, it is better to cache the model in a `scorer` object. Hence, in `code_bert_score` we also provide an object-oriented API. \n",
     "\n",
     "The `BERTScorer` class provides the two methods we have introduced above, `score` and `plot_example`."
    ]
@@ -510,7 +510,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bert_score import BERTScorer"
+    "from code_bert_score import BERTScorer"
    ]
   },
   {
