Fixing minor errors.
code_bert_score.score returns four values (P, R, F1, F3).

In the example you get an error because the code is only expecting three, so I added the F3 variable.

--- a/example/Demo.ipynb
+++ b/example/Demo.ipynb
@@ -333,7 +333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "P, R, F1 = score(cands, refs, lang='en', rescale_with_baseline=True)"
+    "P, R, F1, F3 = score(cands, refs, lang='en', rescale_with_baseline=True)"
    ]
   },
   {
@@ -528,7 +528,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "P, R, F1 = scorer.score(cands, refs)"
+    "P, R, F1, F3 = scorer.score(cands, refs)"
    ]
   },
   {
