Minor update in the example

--- a/example/Demo.ipynb
+++ b/example/Demo.ipynb
@@ -391,7 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "P_mul, R_mul, F_mul = score(single_cands, multi_refs, lang=\"en\", rescale_with_baseline=True)"
+    "P_mul, R_mul, F_mul, F3_mul = score(single_cands, multi_refs, lang=\"en\", rescale_with_baseline=True)"
    ]
   },
   {
@@ -528,7 +528,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "P, R, F1, F3 = scorer.score(cands, refs)"
+    "P, R, F1 = scorer.score(cands, refs)"
    ]
   },
   {
