--- a/example/Demo.ipynb
+++ b/example/Demo.ipynb
@@ -224,14 +224,14 @@
     }
    ],
    "source": [
-    "P, R, F1 = score(cands, refs, lang='en', verbose=True)"
+    "P, R, F1, F3 = score(cands, refs, lang='en', verbose=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The outputs of the `score` function are Tensors of precision, recall, and F1 respectively. Each Tensor has the same number of items with the candidate and reference lists. Each item in the list is a scalar, representing the score for the corresponding candidates and references."
+    "The outputs of the `score` function are Tensors of precision, recall, F1 and F3 respectively. Each Tensor has the same number of items with the candidate and reference lists. Each item in the list is a scalar, representing the score for the corresponding candidates and references."
    ]
   },
   {
@@ -333,7 +333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "P, R, F1 = score(cands, refs, lang='en', rescale_with_baseline=True)"
+    "P, R, F1, F3 = score(cands, refs, lang='en', rescale_with_baseline=True)"
    ]
   },
   {
@@ -391,7 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "P_mul, R_mul, F_mul = score(single_cands, multi_refs, lang=\"en\", rescale_with_baseline=True)"
+    "P_mul, R_mul, F_mul, F3_mul = score(single_cands, multi_refs, lang=\"en\", rescale_with_baseline=True)"
    ]
   },
   {
